add project page again

--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
-{{> header}}
+<head>
+	<meta charset='utf-8'>
+	<title>Some Website</title>
+</head>
 <body>
-<p>here will be the place with all the projects and stuff.</p>
+
+	{{> header}}
+
+	<p>project page stuff will go here.  it will be stellar.</p>
+	
+	{{> footer}}
+
 </body>
-{{> footer}}
 </html>
